--- a/frontend/public/assets/css/portal.css
+++ b/frontend/public/assets/css/portal.css
@@ -13214,14 +13214,15 @@ button.close:focus {
 
 .app-nav .nav-icon {
   position: absolute;
-  left: 1rem;
-  top: .7rem
+  left: 1.25rem;
+  top: .9rem
 }
 
 .app-nav .nav-icon .bi {
-  width: 1.25rem;
-  height: 1.25rem
+  width: 1rem;
+  height: 1rem
 }
+
 
 .app-nav .submenu-arrow {
   position: absolute;
@@ -14040,3 +14041,19 @@ button.close:focus {
     width: 100%
   }
 }
+
+.bi::before,
+[class^="bi-"]::before,
+[class*=" bi-"]::before {
+  display: inline-block;
+  font-family: bootstrap-icons !important;
+  font-style: normal;
+  font-weight: normal !important;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  vertical-align: -.125em;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.bi-person::before { content: "\f4e1"; }
