--- a/frontend/public/assets/css/portal.css
+++ b/frontend/public/assets/css/portal.css
@@ -88,34 +88,34 @@
 /*--------------------------------------------------------------
 # Page Title
 --------------------------------------------------------------*/
-.pagetitlenice {
+.pagetitle {
   margin-bottom: 10px;
 }
-.pagetitlenice h1 {
-  font-size: 24px;
+.pagetitle h1 {
+  font-size: 16px;
   margin-bottom: 0;
   font-weight: 600;
   color: #012970;
 }
 
 /* Breadcrumbs */
-.breadcrumbnice {
+.breadcrumb {
   font-size: 14px;
   font-family: "Nunito", sans-serif;
   color: #899bbd;
   font-weight: 600;
 }
-.breadcrumbnice a {
+.breadcrumb a {
   color: #899bbd;
   transition: 0.3s;
 }
-.breadcrumbnice a:hover {
+.breadcrumb a:hover {
   color: #51678f;
 }
-.breadcrumbnice .breadcrumbnice-item::before {
+.breadcrumb .breadcrumb-item::before {
   color: #899bbd;
 }
-.breadcrumbnice .active {
+.breadcrumb .active {
   color: #51678f;
   font-weight: 600;
 }
@@ -13439,7 +13439,7 @@ button.close:focus {
 }
 
 .app-card-stat .stats-figure {
-  font-size: 2rem;
+  font-size: 1.5rem;
   color: #252930
 }
 
